# PaddleX

./: .pre-commit-config.yaml  README.md  README_en.md  install_pdx.py  main.py  mkdocs.yml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: 3_deploy.md
.github/workflows/: deploy_docs.yml
.precommit/: check_custom.py  check_imports.py  check_license_headers.py
api_examples/pipelines/: test_3d_bev_detection.py  test_anomaly_detection.py  test_doc_preprocessor.py  test_formula_recognition.py  test_image_classification.py  test_image_multilabel_classification.py  test_layout_parsing.py  test_multilingual_speech_recognition.py  test_object_detection.py  test_ocr.py  test_pedestrian_attribute_rec.py  test_pp_chatocrv3.py  test_pp_chatocrv4.py  test_pp_doctranslation.py  test_pp_structure_v3.py  test_pp_translation.py  test_seal_recognition.py  test_shitu.py  test_table_recognition.py  test_table_recognition_v2.py  test_ts_anomaly_detection.py  test_ts_classification.py  test_ts_forecast.py  test_vehicle_attribute_rec.py  test_video_classification.py  (+1 more)
deploy/hps/sdk/paddlex-hps-client/: pyproject.toml  requirements.txt
deploy/hps/sdk/paddlex-hps-client/scripts/: build_wheel.sh
deploy/hps/sdk/paddlex-hps-client/src/paddlex_hps_client/: __init__.py  request.py  utils.py
docs/: CHANGELOG.en.md  CHANGELOG.md  CHANGLOG.en.md  CHANGLOG.md  FAQ.en.md  FAQ.md  VisualDL.en.md  VisualDL.md  index.en.md  index.md
paddlex/: __init__.py  constants.py  engine.py  hpip_links.html  model.py  paddle2onnx_requirements.txt  paddlex_cli.py  serving_requirements.txt  version.py
(+1358 files in other folders)
